// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CompliancePolicies expect to render a policies table 1`] = `
<Fragment>
  <PageHeader
    className="page-header"
  >
    <PageHeaderTitle
      title="SCAP policies"
    />
  </PageHeader>
  <Connect(Main)>
    <StateView
      stateValues={
        Object {
          "data": Object {
            "profiles": Object {
              "__typename": "ProfileConnection",
              "edges": Array [
                Object {
                  "__typename": "ProfileEdge",
                  "node": Object {
                    "__typename": "Profile",
                    "businessObjective": null,
                    "complianceThreshold": 100,
                    "id": "b71376fd-015e-4209-99af-4543e82e5dc5",
                    "name": "United States Government Configuration Baseline23",
                    "refId": "xccdf_org.ssgproject.content_profile_ospp23",
                  },
                },
                Object {
                  "__typename": "ProfileEdge",
                  "node": Object {
                    "__typename": "Profile",
                    "businessObjective": null,
                    "complianceThreshold": 68.9,
                    "id": "719999b6-d230-4ba5-8dba-7ab3dc6561e0",
                    "name": "PCI-DSS v3 Control Baseline for Red Hat Enterprise Linux 73",
                    "refId": "xccdf_org.ssgproject.content_profile_pci-dss3",
                  },
                },
                Object {
                  "__typename": "ProfileEdge",
                  "node": Object {
                    "__typename": "Profile",
                    "businessObjective": null,
                    "complianceThreshold": 100,
                    "id": "a440e363-b5a9-4a86-84e2-f6b3c9b56dc4",
                    "name": "PCI-DSS v3.2.1 Control Baseline for Red Hat Enterprise Linux 7 - customized111",
                    "refId": "xccdf_org.ssgproject.content_profile_pci-dss - customized111",
                  },
                },
                Object {
                  "__typename": "ProfileEdge",
                  "node": Object {
                    "__typename": "Profile",
                    "businessObjective": null,
                    "complianceThreshold": 100,
                    "id": "dae0487d-3201-4ee0-af5f-b94cde2af818",
                    "name": "United States Government Configuration Baseline2",
                    "refId": "xccdf_org.ssgproject.content_profile_ospp2",
                  },
                },
                Object {
                  "__typename": "ProfileEdge",
                  "node": Object {
                    "__typename": "Profile",
                    "businessObjective": null,
                    "complianceThreshold": 100,
                    "id": "8ed49cf9-16d4-4e49-9892-331b3c30919b",
                    "name": "PCI-DSS v3 Control Baseline for Red Hat Enterprise Linux 8 - custom",
                    "refId": "xccdf_org.ssgproject.content_profile_pci-dss_customized",
                  },
                },
                Object {
                  "__typename": "ProfileEdge",
                  "node": Object {
                    "__typename": "Profile",
                    "businessObjective": null,
                    "complianceThreshold": 92,
                    "id": "dad42f58-bd06-42c1-986e-9195e951cee8",
                    "name": "DISA STIG for Red Hat Enterprise Linux 7 - customized",
                    "refId": "xccdf_org.ssgproject.content_profile_stig-rhel7-disa - customized",
                  },
                },
                Object {
                  "__typename": "ProfileEdge",
                  "node": Object {
                    "__typename": "Profile",
                    "businessObjective": null,
                    "complianceThreshold": 69.5,
                    "id": "20a9d997-62a6-40cc-a5f3-19d466eb975e",
                    "name": "C2S for Red Hat Enterprise Linux 7",
                    "refId": "xccdf_org.ssgproject.content_profile_C2S",
                  },
                },
                Object {
                  "__typename": "ProfileEdge",
                  "node": Object {
                    "__typename": "Profile",
                    "businessObjective": null,
                    "complianceThreshold": 100,
                    "id": "e4fe9d96-cf78-4f71-9831-db8240fe6477",
                    "name": "United States Government Configuration Baseline - customized",
                    "refId": "xccdf_org.ssgproject.content_profile_ospp - customized",
                  },
                },
                Object {
                  "__typename": "ProfileEdge",
                  "node": Object {
                    "__typename": "Profile",
                    "businessObjective": null,
                    "complianceThreshold": 100,
                    "id": "9bd795d6-fdd7-4c4a-8fa5-13968be8984c",
                    "name": "United States Government Configuration Baseline23",
                    "refId": "xccdf_org.ssgproject.content_profile_osp23",
                  },
                },
                Object {
                  "__typename": "ProfileEdge",
                  "node": Object {
                    "__typename": "Profile",
                    "businessObjective": null,
                    "complianceThreshold": 100,
                    "id": "6d345bd2-d597-4df8-9bcf-71c41155b42c",
                    "name": "Criminal Justice Information Services (CJIS) Security Policy",
                    "refId": "xccdf_org.ssgproject.content_profile_cjis",
                  },
                },
                Object {
                  "__typename": "ProfileEdge",
                  "node": Object {
                    "__typename": "Profile",
                    "businessObjective": null,
                    "complianceThreshold": 100,
                    "id": "c8e15347-9c2b-495d-8e54-503c2f9582b6",
                    "name": "Unclassified Information in Non-federal Information Systems and Organizations (NIST 800-171)",
                    "refId": "xccdf_org.ssgproject.content_profile_nist-800-171-cui",
                  },
                },
                Object {
                  "__typename": "ProfileEdge",
                  "node": Object {
                    "__typename": "Profile",
                    "businessObjective": null,
                    "complianceThreshold": 100,
                    "id": "3c4823a1-2c16-46ae-b2fe-0cebf5a03931",
                    "name": "PCI-DSS v3 Control Baseline for Red Hat Enterprise Linux 7",
                    "refId": "xccdf_org.ssgproject.content_profile_pci-dss",
                  },
                },
                Object {
                  "__typename": "ProfileEdge",
                  "node": Object {
                    "__typename": "Profile",
                    "businessObjective": null,
                    "complianceThreshold": 100,
                    "id": "f7b7977a-403b-4cd1-ab90-20b6f9a5a359",
                    "name": "Red Hat Corporate Profile for Certified Cloud Providers (RH CCP)",
                    "refId": "xccdf_org.ssgproject.content_profile_rht-ccp",
                  },
                },
                Object {
                  "__typename": "ProfileEdge",
                  "node": Object {
                    "__typename": "Profile",
                    "businessObjective": null,
                    "complianceThreshold": 100,
                    "id": "36abc364-6dc3-4e35-94f4-d10fa77e866e",
                    "name": "Health Insurance Portability and Accountability Act (HIPAA)",
                    "refId": "xccdf_org.ssgproject.content_profile_hipaa",
                  },
                },
                Object {
                  "__typename": "ProfileEdge",
                  "node": Object {
                    "__typename": "Profile",
                    "businessObjective": null,
                    "complianceThreshold": 100,
                    "id": "d35c8aad-8fc8-49e8-bff0-4d9d3dc8f220",
                    "name": "United States Government Configuration Baseline",
                    "refId": "xccdf_org.ssgproject.content_profile_ospp",
                  },
                },
                Object {
                  "__typename": "ProfileEdge",
                  "node": Object {
                    "__typename": "Profile",
                    "businessObjective": null,
                    "complianceThreshold": 100,
                    "id": "4c27fe09-9a7f-437c-b38b-e42272d9ccf0",
                    "name": "Standard System Security Profile for Red Hat Enterprise Linux 7",
                    "refId": "xccdf_org.ssgproject.content_profile_standard",
                  },
                },
                Object {
                  "__typename": "ProfileEdge",
                  "node": Object {
                    "__typename": "Profile",
                    "businessObjective": null,
                    "complianceThreshold": 100,
                    "id": "9b034440-e3dd-4c19-8f2c-ca75e813d57d",
                    "name": "DISA STIG for Red Hat Enterprise Linux 7",
                    "refId": "xccdf_org.ssgproject.content_profile_stig-rhel7-disa",
                  },
                },
                Object {
                  "__typename": "ProfileEdge",
                  "node": Object {
                    "__typename": "Profile",
                    "businessObjective": null,
                    "complianceThreshold": 100,
                    "id": "19921ca4-8526-4651-8876-3c8587e8e125",
                    "name": "PCI-DSS v3 Control Baseline for Red Hat Enterprise Linux 72",
                    "refId": "xccdf_org.ssgproject.content_profile_pci-dss2",
                  },
                },
                Object {
                  "__typename": "ProfileEdge",
                  "node": Object {
                    "__typename": "Profile",
                    "businessObjective": null,
                    "complianceThreshold": 100,
                    "id": "fcfa7e62-eebe-4cbc-8583-d4c2e0bb3ccc",
                    "name": "DISA STIG for Red Hat Enterprise Linux 7 - customized23",
                    "refId": "xccdf_org.ssgproject.content_profile_stig-rhel7-disa - customized23",
                  },
                },
              ],
            },
          },
          "error": undefined,
          "loading": undefined,
        }
      }
    >
      <StateViewPart
        stateKey="error"
      >
        <ErrorPage />
      </StateViewPart>
      <StateViewPart
        stateKey="loading"
      >
        <LoadingPoliciesTable />
      </StateViewPart>
      <StateViewPart
        stateKey="data"
      >
        <withRouter(Connect(RouterParams))
          onWizardFinish={[Function]}
          policies={
            Array [
              Object {
                "__typename": "Profile",
                "businessObjective": null,
                "complianceThreshold": 100,
                "id": "b71376fd-015e-4209-99af-4543e82e5dc5",
                "name": "United States Government Configuration Baseline23",
                "refId": "xccdf_org.ssgproject.content_profile_ospp23",
              },
              Object {
                "__typename": "Profile",
                "businessObjective": null,
                "complianceThreshold": 68.9,
                "id": "719999b6-d230-4ba5-8dba-7ab3dc6561e0",
                "name": "PCI-DSS v3 Control Baseline for Red Hat Enterprise Linux 73",
                "refId": "xccdf_org.ssgproject.content_profile_pci-dss3",
              },
              Object {
                "__typename": "Profile",
                "businessObjective": null,
                "complianceThreshold": 100,
                "id": "a440e363-b5a9-4a86-84e2-f6b3c9b56dc4",
                "name": "PCI-DSS v3.2.1 Control Baseline for Red Hat Enterprise Linux 7 - customized111",
                "refId": "xccdf_org.ssgproject.content_profile_pci-dss - customized111",
              },
              Object {
                "__typename": "Profile",
                "businessObjective": null,
                "complianceThreshold": 100,
                "id": "dae0487d-3201-4ee0-af5f-b94cde2af818",
                "name": "United States Government Configuration Baseline2",
                "refId": "xccdf_org.ssgproject.content_profile_ospp2",
              },
              Object {
                "__typename": "Profile",
                "businessObjective": null,
                "complianceThreshold": 100,
                "id": "8ed49cf9-16d4-4e49-9892-331b3c30919b",
                "name": "PCI-DSS v3 Control Baseline for Red Hat Enterprise Linux 8 - custom",
                "refId": "xccdf_org.ssgproject.content_profile_pci-dss_customized",
              },
              Object {
                "__typename": "Profile",
                "businessObjective": null,
                "complianceThreshold": 92,
                "id": "dad42f58-bd06-42c1-986e-9195e951cee8",
                "name": "DISA STIG for Red Hat Enterprise Linux 7 - customized",
                "refId": "xccdf_org.ssgproject.content_profile_stig-rhel7-disa - customized",
              },
              Object {
                "__typename": "Profile",
                "businessObjective": null,
                "complianceThreshold": 69.5,
                "id": "20a9d997-62a6-40cc-a5f3-19d466eb975e",
                "name": "C2S for Red Hat Enterprise Linux 7",
                "refId": "xccdf_org.ssgproject.content_profile_C2S",
              },
              Object {
                "__typename": "Profile",
                "businessObjective": null,
                "complianceThreshold": 100,
                "id": "e4fe9d96-cf78-4f71-9831-db8240fe6477",
                "name": "United States Government Configuration Baseline - customized",
                "refId": "xccdf_org.ssgproject.content_profile_ospp - customized",
              },
              Object {
                "__typename": "Profile",
                "businessObjective": null,
                "complianceThreshold": 100,
                "id": "9bd795d6-fdd7-4c4a-8fa5-13968be8984c",
                "name": "United States Government Configuration Baseline23",
                "refId": "xccdf_org.ssgproject.content_profile_osp23",
              },
              Object {
                "__typename": "Profile",
                "businessObjective": null,
                "complianceThreshold": 100,
                "id": "6d345bd2-d597-4df8-9bcf-71c41155b42c",
                "name": "Criminal Justice Information Services (CJIS) Security Policy",
                "refId": "xccdf_org.ssgproject.content_profile_cjis",
              },
              Object {
                "__typename": "Profile",
                "businessObjective": null,
                "complianceThreshold": 100,
                "id": "c8e15347-9c2b-495d-8e54-503c2f9582b6",
                "name": "Unclassified Information in Non-federal Information Systems and Organizations (NIST 800-171)",
                "refId": "xccdf_org.ssgproject.content_profile_nist-800-171-cui",
              },
              Object {
                "__typename": "Profile",
                "businessObjective": null,
                "complianceThreshold": 100,
                "id": "3c4823a1-2c16-46ae-b2fe-0cebf5a03931",
                "name": "PCI-DSS v3 Control Baseline for Red Hat Enterprise Linux 7",
                "refId": "xccdf_org.ssgproject.content_profile_pci-dss",
              },
              Object {
                "__typename": "Profile",
                "businessObjective": null,
                "complianceThreshold": 100,
                "id": "f7b7977a-403b-4cd1-ab90-20b6f9a5a359",
                "name": "Red Hat Corporate Profile for Certified Cloud Providers (RH CCP)",
                "refId": "xccdf_org.ssgproject.content_profile_rht-ccp",
              },
              Object {
                "__typename": "Profile",
                "businessObjective": null,
                "complianceThreshold": 100,
                "id": "36abc364-6dc3-4e35-94f4-d10fa77e866e",
                "name": "Health Insurance Portability and Accountability Act (HIPAA)",
                "refId": "xccdf_org.ssgproject.content_profile_hipaa",
              },
              Object {
                "__typename": "Profile",
                "businessObjective": null,
                "complianceThreshold": 100,
                "id": "d35c8aad-8fc8-49e8-bff0-4d9d3dc8f220",
                "name": "United States Government Configuration Baseline",
                "refId": "xccdf_org.ssgproject.content_profile_ospp",
              },
              Object {
                "__typename": "Profile",
                "businessObjective": null,
                "complianceThreshold": 100,
                "id": "4c27fe09-9a7f-437c-b38b-e42272d9ccf0",
                "name": "Standard System Security Profile for Red Hat Enterprise Linux 7",
                "refId": "xccdf_org.ssgproject.content_profile_standard",
              },
              Object {
                "__typename": "Profile",
                "businessObjective": null,
                "complianceThreshold": 100,
                "id": "9b034440-e3dd-4c19-8f2c-ca75e813d57d",
                "name": "DISA STIG for Red Hat Enterprise Linux 7",
                "refId": "xccdf_org.ssgproject.content_profile_stig-rhel7-disa",
              },
              Object {
                "__typename": "Profile",
                "businessObjective": null,
                "complianceThreshold": 100,
                "id": "19921ca4-8526-4651-8876-3c8587e8e125",
                "name": "PCI-DSS v3 Control Baseline for Red Hat Enterprise Linux 72",
                "refId": "xccdf_org.ssgproject.content_profile_pci-dss2",
              },
              Object {
                "__typename": "Profile",
                "businessObjective": null,
                "complianceThreshold": 100,
                "id": "fcfa7e62-eebe-4cbc-8583-d4c2e0bb3ccc",
                "name": "DISA STIG for Red Hat Enterprise Linux 7 - customized23",
                "refId": "xccdf_org.ssgproject.content_profile_stig-rhel7-disa - customized23",
              },
            ]
          }
        />
      </StateViewPart>
    </StateView>
  </Connect(Main)>
</Fragment>
`;

exports[`CompliancePolicies expect to render an error 1`] = `
<Fragment>
  <PageHeader
    className="page-header"
  >
    <PageHeaderTitle
      title="SCAP policies"
    />
  </PageHeader>
  <Connect(Main)>
    <StateView
      stateValues={
        Object {
          "data": undefined,
          "error": Object {
            "error": "Test Error loading",
            "networkError": Object {
              "statusCode": 500,
            },
          },
          "loading": undefined,
        }
      }
    >
      <StateViewPart
        stateKey="error"
      >
        <ErrorPage
          error={
            Object {
              "error": "Test Error loading",
              "networkError": Object {
                "statusCode": 500,
              },
            }
          }
        />
      </StateViewPart>
      <StateViewPart
        stateKey="loading"
      >
        <LoadingPoliciesTable />
      </StateViewPart>
      <StateViewPart
        stateKey="data"
      >
        <withRouter(Connect(RouterParams))
          onWizardFinish={[Function]}
        />
      </StateViewPart>
    </StateView>
  </Connect(Main)>
</Fragment>
`;

exports[`CompliancePolicies expect to render emptystate 1`] = `
<Fragment>
  <PageHeader
    className="page-header"
  >
    <PageHeaderTitle
      title="SCAP policies"
    />
  </PageHeader>
  <Connect(Main)>
    <StateView
      stateValues={
        Object {
          "data": Object {
            "profiles": Object {
              "edges": Array [],
            },
          },
          "error": undefined,
          "loading": undefined,
        }
      }
    >
      <StateViewPart
        stateKey="error"
      >
        <ErrorPage />
      </StateViewPart>
      <StateViewPart
        stateKey="loading"
      >
        <LoadingPoliciesTable />
      </StateViewPart>
      <StateViewPart
        stateKey="data"
      >
        <Grid
          hasGutter={true}
        >
          <ComplianceEmptyState
            client={
              ApolloClient {
                "cache": InMemoryCache {
                  "addTypename": true,
                  "cacheKeyRoot": KeyTrie {
                    "weakness": true,
                  },
                  "config": Object {
                    "addTypename": true,
                    "dataIdFromObject": [Function],
                    "fragmentMatcher": HeuristicFragmentMatcher {},
                    "freezeResults": false,
                    "resultCaching": true,
                  },
                  "data": DepTrackingCache {
                    "data": Object {},
                    "depend": [Function],
                  },
                  "maybeBroadcastWatch": [Function],
                  "optimisticData": DepTrackingCache {
                    "data": Object {},
                    "depend": [Function],
                  },
                  "silenceBroadcast": false,
                  "storeReader": StoreReader {
                    "executeSelectionSet": [Function],
                    "executeStoreQuery": [Function],
                    "executeSubSelectedArray": [Function],
                    "freezeResults": false,
                  },
                  "storeWriter": StoreWriter {},
                  "typenameDocumentCache": Array [],
                  "watches": Array [],
                },
                "clearStoreCallbacks": Array [],
                "defaultOptions": Object {},
                "disableNetworkFetches": false,
                "link": HttpLink {
                  "request": [Function],
                },
                "localState": LocalState {
                  "cache": InMemoryCache {
                    "addTypename": true,
                    "cacheKeyRoot": KeyTrie {
                      "weakness": true,
                    },
                    "config": Object {
                      "addTypename": true,
                      "dataIdFromObject": [Function],
                      "fragmentMatcher": HeuristicFragmentMatcher {},
                      "freezeResults": false,
                      "resultCaching": true,
                    },
                    "data": DepTrackingCache {
                      "data": Object {},
                      "depend": [Function],
                    },
                    "maybeBroadcastWatch": [Function],
                    "optimisticData": DepTrackingCache {
                      "data": Object {},
                      "depend": [Function],
                    },
                    "silenceBroadcast": false,
                    "storeReader": StoreReader {
                      "executeSelectionSet": [Function],
                      "executeStoreQuery": [Function],
                      "executeSubSelectedArray": [Function],
                      "freezeResults": false,
                    },
                    "storeWriter": StoreWriter {},
                    "typenameDocumentCache": Array [],
                    "watches": Array [],
                  },
                  "client": [Circular],
                },
                "mutate": [Function],
                "query": [Function],
                "queryDeduplication": true,
                "queryManager": QueryManager {
                  "assumeImmutableResults": false,
                  "clientAwareness": Object {
                    "name": undefined,
                    "version": undefined,
                  },
                  "dataStore": DataStore {
                    "cache": InMemoryCache {
                      "addTypename": true,
                      "cacheKeyRoot": KeyTrie {
                        "weakness": true,
                      },
                      "config": Object {
                        "addTypename": true,
                        "dataIdFromObject": [Function],
                        "fragmentMatcher": HeuristicFragmentMatcher {},
                        "freezeResults": false,
                        "resultCaching": true,
                      },
                      "data": DepTrackingCache {
                        "data": Object {},
                        "depend": [Function],
                      },
                      "maybeBroadcastWatch": [Function],
                      "optimisticData": DepTrackingCache {
                        "data": Object {},
                        "depend": [Function],
                      },
                      "silenceBroadcast": false,
                      "storeReader": StoreReader {
                        "executeSelectionSet": [Function],
                        "executeStoreQuery": [Function],
                        "executeSubSelectedArray": [Function],
                        "freezeResults": false,
                      },
                      "storeWriter": StoreWriter {},
                      "typenameDocumentCache": Array [],
                      "watches": Array [],
                    },
                  },
                  "fetchQueryRejectFns": Array [],
                  "idCounter": 1,
                  "inFlightLinkObservables": Array [],
                  "link": HttpLink {
                    "request": [Function],
                  },
                  "localState": LocalState {
                    "cache": InMemoryCache {
                      "addTypename": true,
                      "cacheKeyRoot": KeyTrie {
                        "weakness": true,
                      },
                      "config": Object {
                        "addTypename": true,
                        "dataIdFromObject": [Function],
                        "fragmentMatcher": HeuristicFragmentMatcher {},
                        "freezeResults": false,
                        "resultCaching": true,
                      },
                      "data": DepTrackingCache {
                        "data": Object {},
                        "depend": [Function],
                      },
                      "maybeBroadcastWatch": [Function],
                      "optimisticData": DepTrackingCache {
                        "data": Object {},
                        "depend": [Function],
                      },
                      "silenceBroadcast": false,
                      "storeReader": StoreReader {
                        "executeSelectionSet": [Function],
                        "executeStoreQuery": [Function],
                        "executeSubSelectedArray": [Function],
                        "freezeResults": false,
                      },
                      "storeWriter": StoreWriter {},
                      "typenameDocumentCache": Array [],
                      "watches": Array [],
                    },
                    "client": [Circular],
                  },
                  "mutationStore": MutationStore {
                    "store": Object {},
                  },
                  "onBroadcast": [Function],
                  "pollingInfoByQueryId": Array [],
                  "queries": Array [],
                  "queryDeduplication": true,
                  "queryStore": QueryStore {
                    "store": Object {},
                  },
                  "ssrMode": false,
                  "transformCache": WeakMap {},
                },
                "reFetchObservableQueries": [Function],
                "resetStore": [Function],
                "resetStoreCallbacks": Array [],
                "store": DataStore {
                  "cache": InMemoryCache {
                    "addTypename": true,
                    "cacheKeyRoot": KeyTrie {
                      "weakness": true,
                    },
                    "config": Object {
                      "addTypename": true,
                      "dataIdFromObject": [Function],
                      "fragmentMatcher": HeuristicFragmentMatcher {},
                      "freezeResults": false,
                      "resultCaching": true,
                    },
                    "data": DepTrackingCache {
                      "data": Object {},
                      "depend": [Function],
                    },
                    "maybeBroadcastWatch": [Function],
                    "optimisticData": DepTrackingCache {
                      "data": Object {},
                      "depend": [Function],
                    },
                    "silenceBroadcast": false,
                    "storeReader": StoreReader {
                      "executeSelectionSet": [Function],
                      "executeStoreQuery": [Function],
                      "executeSubSelectedArray": [Function],
                      "freezeResults": false,
                    },
                    "storeWriter": StoreWriter {},
                    "typenameDocumentCache": Array [],
                    "watches": Array [],
                  },
                },
                "typeDefs": undefined,
                "version": "2.6.10",
                "watchQuery": [Function],
              }
            }
            mainButton={
              <Memo(Connect(CreatePolicy))
                onWizardFinish={[Function]}
              />
            }
            title="No policies"
          />
        </Grid>
      </StateViewPart>
    </StateView>
  </Connect(Main)>
</Fragment>
`;

exports[`CompliancePolicies expect to render loading 1`] = `
<Fragment>
  <PageHeader
    className="page-header"
  >
    <PageHeaderTitle
      title="SCAP policies"
    />
  </PageHeader>
  <Connect(Main)>
    <StateView
      stateValues={
        Object {
          "data": undefined,
          "error": undefined,
          "loading": true,
        }
      }
    >
      <StateViewPart
        stateKey="error"
      >
        <ErrorPage />
      </StateViewPart>
      <StateViewPart
        stateKey="loading"
      >
        <LoadingPoliciesTable />
      </StateViewPart>
      <StateViewPart
        stateKey="data"
      >
        <withRouter(Connect(RouterParams))
          onWizardFinish={[Function]}
        />
      </StateViewPart>
    </StateView>
  </Connect(Main)>
</Fragment>
`;

exports[`CompliancePolicies expect to render without error 1`] = `
<Fragment>
  <PageHeader
    className="page-header"
  >
    <PageHeaderTitle
      title="SCAP policies"
    />
  </PageHeader>
  <Connect(Main)>
    <StateView
      stateValues={
        Object {
          "data": Object {
            "profiles": Object {
              "edges": Array [
                Object {
                  "businessObjective": Object {
                    "id": "1",
                    "title": "BO 1",
                  },
                  "complianceThreshold": 90,
                  "id": "1",
                  "name": "profile1",
                  "refId": "121212",
                },
              ],
            },
          },
          "error": undefined,
          "loading": undefined,
        }
      }
    >
      <StateViewPart
        stateKey="error"
      >
        <ErrorPage />
      </StateViewPart>
      <StateViewPart
        stateKey="loading"
      >
        <LoadingPoliciesTable />
      </StateViewPart>
      <StateViewPart
        stateKey="data"
      >
        <withRouter(Connect(RouterParams))
          onWizardFinish={[Function]}
          policies={
            Array [
              undefined,
            ]
          }
        />
      </StateViewPart>
    </StateView>
  </Connect(Main)>
</Fragment>
`;
